@startuml

title DOMAIN MODEL - DDD

hide empty members
'skinparam Linetype ortho

skinparam class {
    BackgroundColor<<valueObject>> #D6EAF8
    BackgroundColor<<root>> #FDEBD0
    BackgroundColor<<service>> #D1F2EB
    BackgroundColor #FEF9E7
    ArrowColor Black
}

skinparam package {
    BackgroundColor #EBF5FB
}


' Job Opening Aggregate
package "<<aggregate>> Job Opening" {
    entity JobOpening <<entity>> <<root>> {}

    class JobReference <<valueObject>> <<(V, #FF8B40)>> {}
    class TitleOrFunction <<valueObject>> <<(V, #FF8B40)>> {}
    class ContractType <<valueObject>> <<(V, #FF8B40)>> {}
    class Mode <<valueObject>> <<(V, #FF8B40)>> {}
    class NumberOfVacancies <<valueObject>> <<(V, #FF8B40)>> {}
    class JobDescription <<valueObject>> <<(V, #FF8B40)>> {}
    entity RequirementSpecification <<entity>> {}
}

' Interview Aggregate
package "<<aggregate>> Interview" {
    entity Interview <<entity>> <<root>> {}

    class InterviewDate <<valueObject>> <<(V, #FF8B40)>> {}
    class InterviewTime <<valueObject>> <<(V, #FF8B40)>> {}
}


' Plugin Aggregate
package "<<aggregate>> Plugin" {
    entity Plugin <<entity>> <<root>> {}
    entity RequirementModel <<entity>> {}
    entity InterviewModel <<entity>> {}
        
    class Description <<valueObject>> <<(V, #FF8B40)>> {}
}

' RecruitmentProcess Aggregate
package "<<aggregate>> RecruitmentProcess" {
    entity RecruitmentProcess <<entity>> <<root>> {}
    entity Phase <<entity>> {}
    entity ApplicationPhase <<entity>> {}
    entity ScreeningPhase <<entity>> {}
    entity InterviewPhase <<entity>> {}
    entity AnalysisPhase <<entity>> {}
    entity ResultPhase <<entity>> {}
    
    class InitialDate <<valueObject>> <<(V, #FF8B40)>> {}
    class FinalDate <<valueObject>> <<(V, #FF8B40)>> {}
    class State <<valueObject>> <<(V, #FF8B40)>> {}

    note right of State: State can be Opened or Closed
}


' Recruitment Process relationships
RecruitmentProcess "1" --> "*" Phase : has
RecruitmentProcess "1" --> "1" JobOpening : for

' Job Opening relationships
JobOpening "1" --> "1" JobReference : has
JobOpening "1" --> "1" TitleOrFunction : has
JobOpening "1" --> "1" ContractType : has
JobOpening "1" --> "1" Mode : has
JobOpening "1" --> "1" NumberOfVacancies : has
JobOpening "1" --> "1" JobDescription : has
JobOpening "1" --> "1" RequirementSpecification: has
JobOpening "1" -down--> "1" Interview : can have

' Plugin relationships
Plugin "1" --> "1" Description : has
Plugin <-down- InterviewModel
Plugin <-down- RequirementModel

' Interview relationships
Interview "1" --> "1" InterviewDate : has
Interview "1" --> "1" InterviewTime : has
Interview "1" --> "1" Plugin : uses

' Phase relationships
Phase "1" --> "1" State: has
Phase "1" --> "1" InitialDate: has
Phase "1" --> "1" FinalDate: has

ApplicationPhase -up-|> Phase: is a
ScreeningPhase -up-|> Phase: is a
InterviewPhase -up-|> Phase: is a
AnalysisPhase -up-|> Phase: is a
ResultPhase -up-|> Phase: is a

' Requirement Specification relationships
RequirementSpecification "1" --> "1" Plugin: uses



@enduml